@@ -1,8 +1,13 @@
 # ChangeLog for net-misc/proxy
 # Copyright 2002 Alexander Holler
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-misc/proxy/ChangeLog,v 1.1 2002/07/17 15:44:04 holler Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-misc/proxy/ChangeLog,v 1.2 2003/02/18 18:14:03 holler Exp $
 
 *proxy-2.2.4 (17 Jul 2002)
+
+  18 Feb 2003; Alexander Holler <holler@ahsoftware.de>
+  
+  Changed Slot to 0.
+  Added Keywords.
 
   17 Jul 2002; Alexander Holler <holler@ahsoftware.de>
 
